hphp/hack/test/typecheck/expression_trees/lambda_call.php.like_types.exp
File "lambda_call.php", line 6, characters 53-59:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 33, characters 5-45:
  But got `dynamic` because it is an unenforceable type
File "lambda_call.php", line 6, characters 65-65:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 19, characters 6-43:
  But got `dynamic` because it is an unenforceable type
