hphp/hack/test/typecheck/expression_trees/lambda_call.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function foo(): void {
  Code`((ExampleInt $_): ExampleString ==> { return "Hello"; })(4)`;
}
